# icl_ros_segmentation

./: CMakeLists.txt  README.md  package.xml
src/: CoPlanarityFeature.cpp  CoPlanarityFeature.h  ConfigurableDepthImageSegmenter.cpp  ConfigurableDepthImageSegmenter.h  CurvatureFeature.cpp  CurvatureFeature.h  CurvatureFeatureExtractor.cpp  CurvatureFeatureExtractor.h  CutfreeAdjacencyFeature.cpp  CutfreeAdjacencyFeature.h  CutfreeAdjacencyFeatureExtractor.cpp  CutfreeAdjacencyFeatureExtractor.h  FeatureGraphSegmenter.cpp  FeatureGraphSegmenter.h  GraphCut.cpp  GraphCut.h  HighLevelObjectSegmentation.cpp  HighLevelObjectSegmentation.h  Kinect.cpp  Kinect.h  PlanarRansac.cpp  PlanarRansac.h  PlanarRansacEstimator.cpp  PlanarRansacEstimator.h  Point4f.h  RegionGrower.h  RegionGrowing.h  RemainingPointsFeature.cpp  RemainingPointsFeature.h  RemainingPointsFeatureExtractor.cpp  RemainingPointsFeatureExtractor.h  SegmenterHelper.cpp  SegmenterHelper.h  SegmenterUtils.cpp  SegmenterUtils.h  SurfaceFeature.cpp  SurfaceFeature.h  SurfaceFeatureExtractor.cpp  SurfaceFeatureExtractor.h  icl_ros_segmentation_node.cpp  (+2 more)
src/helper/: icl_cv_helper.cpp  icl_cv_helper.h
